tests/renderer/snapshots/tests__renderer__graphical__with_help_suggestion_delete.snap
---
source: tests/renderer/graphical.rs
assertion_line: 319
expression: render(message)
---
× error: unnecessary cast
   help: remove unnecessary cast here
 2 │     return false as Boolean;
   │                 ^^^^^^^^^^^
