tests/renderer/snapshots/tests__renderer__graphical__with_help_suggestion_multiple.snap
---
source: tests/renderer/graphical.rs
expression: render(message)
---
× error: unnecessary parenthesis
   help: remove unnecessary parenthesis here
 2 │     return (false);
   │            ^     ^
