tests/renderer/snapshots/tests__renderer__graphical__with_help_suggestion_replace.snap
---
source: tests/renderer/graphical.rs
assertion_line: 338
expression: render(message)
---
× error: invalid value
   help: did you mean `false`?
 2 │     return false;
   │            ^^^^^
